[FE] smaller notification size on mobile

--- a/front-end/src/containers/Root/styles/styles.scss
+++ b/front-end/src/containers/Root/styles/styles.scss
@@ -36,9 +36,23 @@
     }
   }
 
-  .notification-message {
-    font-size: $regular-font-size;
-    margin: 20px 10px !important;
+  .notifications-tr {
+    .notification {
+      .notification-message {
+        font-size: $regular-font-size;
+        margin: 20px 10px !important;
+      }
+    }
+
+    @media (max-width: 414px) {
+      width: 200px !important;
+      .notification {
+        .notification-message {
+          font-size: 14px;
+          margin: 5px 5px !important;
+        }
+      }
+    }
   }
 }
 
