--- a/front-end/src/containers/Root/components/DropdownFooter/components/DropdownList/styles.scss
+++ b/front-end/src/containers/Root/components/DropdownFooter/components/DropdownList/styles.scss
@@ -27,10 +27,17 @@
     }
   }
 
+  @keyframes dropdown-animation {
+    from { transform: scaleY(0); }
+    to { transform: scaleY(1); }
+  }
+
   .dropdown-list-content {
     color: $text-light-gray;
     font-size: 14px;
     margin-top: 10px;
+    animation-name: dropdown-animation;
+    animation-duration: 0.25s;
 
     div {
       padding-top: 10px;
