--- a/front-end/src/components/NumericCounter/styles.scss
+++ b/front-end/src/components/NumericCounter/styles.scss
@@ -33,7 +33,7 @@
 
     .numeric-counter-number {
       min-width: 10px;
-      font-size: 14px;
+      font-size: $mobile-regular-font-size;
     }
   }
 }
