--- a/front-end/src/containers/MenuModal/component/MenuThumbnailList/styles.scss
+++ b/front-end/src/containers/MenuModal/component/MenuThumbnailList/styles.scss
@@ -9,7 +9,7 @@ $mobile-thumbnail-size: 36px;
   flex-direction: column;
   
   .green-border {
-    border: 2px solid $bg-green;
+    border: 2px solid $green-primary;
   }
 
   .gray-border {
