--- a/front-end/src/containers/Menus/components/MenuItem/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuItem/styles.scss
@@ -63,7 +63,7 @@
     padding: 15px;
 
     .div-menu-item-name-price {
-      font-size: 14px;
+      font-size: $mobile-regular-font-size;
     }
 
     // .div-time-rating {
