--- a/front-end/src/containers/Root/components/Header/styles.scss
+++ b/front-end/src/containers/Root/components/Header/styles.scss
@@ -54,7 +54,7 @@
         width: 60px;
         height: 25px;
         line-height: 25px;
-        font-size: 9px;
+        font-size: $mobile-small-font-size;
       }
     }
   }
