--- a/front-end/src/styles/variables/_fonts.scss
+++ b/front-end/src/styles/variables/_fonts.scss
@@ -7,3 +7,6 @@ $minor-font-size: 12px;
 
 $footer-primary-font-size: 23px;
 $footer-secondary-font-size: 26px;
+
+$mobile-small-font-size: 9px;
+$mobile-regular-font-size: 14px;
