--- a/front-end/src/components/ModalContainer/styles.scss
+++ b/front-end/src/components/ModalContainer/styles.scss
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.44);
+  background-color: $bg-modal;
   z-index: $zindex-modal;
   overflow: scroll;
 }
