--- a/front-end/src/containers/Checkout/components/CheckoutStepForm/styles.scss
+++ b/front-end/src/containers/Checkout/components/CheckoutStepForm/styles.scss
@@ -5,19 +5,19 @@ $checkout-header-height: 108px;
 
 .checkout-step-form-container {
   background-color: white;
-  border: 1px solid #B7CBB8;
+  border: 1px solid $light-green-primary;
   box-shadow: $shadow-primary;
 
   .checkout-step-form-separator {
     height: 1px;
-    background-color: #B7CBB8;
+    background-color: $light-green-primary;
   }
 
   .checkout-step-form-header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #F2FFF3;
+    background-color: $extra-light-gray;
     height: $checkout-header-height;
 
     .img-checked, .div-step-number {
@@ -28,7 +28,7 @@ $checkout-header-height: 108px;
     }
 
     .div-step-number {
-      color: #108915;
+      color: $green-secondary;
       border: 3px solid #06AA0D;
       background-color: white;
       text-align: center;
