--- a/front-end/src/containers/ComboSliceModal/component/RequiredComboChoice/styles.scss
+++ b/front-end/src/containers/ComboSliceModal/component/RequiredComboChoice/styles.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    font-size: 28px;
+    font-size: $footer-secondary-font-size;
   }
 
   .div-required-combo-list {
@@ -20,7 +20,7 @@
 
       span {
         color: #332F2F;
-        font-size: 28px;
+        font-size: $footer-secondary-font-size;
         margin-left: 10px;
       }
     }
@@ -56,7 +56,7 @@
   
         span {
           color: #332F2F;
-          font-size: 13px;
+          font-size: $mobile-regular-font-size;
           margin-left: 10px;
         }
       }
