--- a/front-end/src/containers/ContactUs/styles.scss
+++ b/front-end/src/containers/ContactUs/styles.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables/variables";
 
 .div-contact-us-container {
-  background-color: #F1F1F1;
+  background-color: $extra-light-gray;
 
   .div-contact-us-banner {
     position: relative;
@@ -36,7 +36,7 @@
         text-align: center;
         height: 150px;
         line-height: 150px;
-        background-color: #F2FFF3;
+        background-color: $extra-light-gray;
       }
   
       .div-contact-us-separator {
@@ -53,18 +53,18 @@
         input, textarea {
           width: 100%;
           height: 80px;
-          border: 1px solid #B7CBB8;
+          border: 1px solid $light-green-primary;
           border-radius: 4px;
           color: $text-light-gray;
-          font-size: 27px;
-          caret-color: $bg-green;
+          font-size: $footer-secondary-font-size;
+          caret-color: $green-primary;
           margin-top: 15px;
           resize: none;
           padding: 20px;
         }
   
         input:focus {
-          border: 1px solid $bg-green;
+          border: 1px solid $green-primary;
         }
   
         textarea {
@@ -72,7 +72,7 @@
         }
   
         textarea:focus {
-          border: 1px solid $bg-green;
+          border: 1px solid $green-primary;
         }
   
         .div-contact-us-form-names {
@@ -129,12 +129,12 @@
         }
 
         .div-contact-us-form {
-          font-size: 14px;
+          font-size: $mobile-regular-font-size;
           padding: 0 15px;
 
           input, textarea {
             height: 48px;
-            font-size: 14px;
+            font-size: $mobile-regular-font-size;
             margin-top: 5px;
           }
 
