--- a/front-end/src/containers/Home/components/HowItWorks/styles.scss
+++ b/front-end/src/containers/Home/components/HowItWorks/styles.scss
@@ -86,7 +86,7 @@
     width: 100%;
 
     .btn-all-products {
-      font-size: 17px;
+      font-size: $small-font-size;
       height: 60px;
       width: 100%;
     }
@@ -120,7 +120,7 @@
       }
 
       .div-how-it-works-description {
-        font-size: 16px;
+        font-size: $small-font-size;
         margin-top: 20px;
       }
     }
