--- a/front-end/src/containers/MealPlans/components/MealPlan/styles.scss
+++ b/front-end/src/containers/MealPlans/components/MealPlan/styles.scss
@@ -98,12 +98,12 @@
 
   @media (max-width: 710px) {
     .div-meal-plan-title {
-      font-size: 13px;
+      font-size: $mobile-regular-font-size;
       margin-top: 15px;
     }
 
     .div-meal-plan-subtitle {
-      font-size: 9px;
+      font-size: $mobile-small-font-size;
     }
 
     .div-meal-plan-image {
@@ -114,7 +114,7 @@
       margin-top: 15px;
 
       .div-meal-plan-recipies-title {
-        font-size: 9px;
+        font-size: $mobile-small-font-size;
         margin-top: 10px;
       }
     }
@@ -127,11 +127,11 @@
       .div-menu-plan-price {
         .span-menu-plan-price-old-value {
           margin-top: -10px;
-          font-size: 10px;
+          font-size: $mobile-small-font-size;
         }
   
         .span-menu-plan-price-value {
-          font-size: 10px;
+          font-size: $mobile-small-font-size;
         }
   
         .span-menu-plan-price-title {
@@ -145,7 +145,7 @@
     }
 
     .btn-grab-offer {
-      font-size: 9px;
+      font-size: $mobile-small-font-size;
       width: calc(100% - 20px);
       height: 32px;
       margin: 10px;
