--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -2,7 +2,7 @@
 
 .div-menus-header-container {
   height: 150px;
-  background-color: #F2FFF3;
+  background-color: $extra-light-gray;
   display: flex;
   flex-direction: row;
 
@@ -72,7 +72,7 @@
       text-align: center;
       line-height: 150px;
       font-size: $footer-primary-font-size;
-      color: $bg-green;
+      color: $green-primary;
       margin: 0 5px;
       box-sizing: border-box;
 
@@ -82,13 +82,13 @@
     }
 
     .div-menus-type-item:hover {
-      transition: $animation-primary;
-      border-bottom: 3px solid $bg-green;
+      transition: $transition-primary;
+      border-bottom: 3px solid $green-primary;
     }
 
     .bottom-line {
-      transition: $animation-primary;
-      border-bottom: 3px solid $bg-green;
+      transition: $transition-primary;
+      border-bottom: 3px solid $green-primary;
     }
   }
 
@@ -122,7 +122,7 @@
         margin-bottom: 15px; 
 
         input, span {
-          font-size: 14px;
+          font-size: $mobile-regular-font-size;
         }
         img {
           width: 21px;
@@ -133,13 +133,13 @@
     .div-menus-header-right {
       height: 70px;
       .div-menus-type-item {
-        font-size: 14px;
+        font-size: $mobile-regular-font-size;
         line-height: 70px;
         margin: 0px;
         overflow: hidden;
 
         @media (max-width: 414px) {
-          font-size: 10px;
+          font-size: $mobile-small-font-size;
         }
       }
     }
