--- a/front-end/src/containers/Root/styles/styles.scss
+++ b/front-end/src/containers/Root/styles/styles.scss
@@ -48,7 +48,7 @@
       width: 200px !important;
       .notification {
         .notification-message {
-          font-size: 14px;
+          font-size: $mobile-regular-font-size;
           margin: 5px 5px !important;
         }
       }
