--- a/front-end/src/styles/variables/_colors.scss
+++ b/front-end/src/styles/variables/_colors.scss
@@ -4,10 +4,18 @@ $text-dark-gray: #3B3737;
 $text-gray: #7E808C;
 $text-black: #1B1B1B;
 
-$bg-green: #56B05A;
+$green-primary: #56B05A;
+$green-secondary: #108915;
+
+$light-green-primary: #B7CBB8;
+
+$extra-light-gray: #F2FFF3;
+
 $bg-gray: #F9F9F9;
 
 $bg-footer-primary: #333333;
 $bg-footer-secondary: #212122;
 
 $border-gray: #E3E3E3;
+
+$bg-modal: rgba(0, 0, 0, 0.44);
