[FE] connect menu items / cart.  background coloring fix.

--- a/front-end/src/containers/Checkout/components/CheckoutStepForm/styles.scss
+++ b/front-end/src/containers/Checkout/components/CheckoutStepForm/styles.scss
@@ -17,7 +17,7 @@ $checkout-header-height: 108px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: $extra-light-gray;
+    background-color: $extra-light-green;
     height: $checkout-header-height;
 
     .img-checked, .div-step-number {
