--- a/front-end/src/containers/Checkout/styles.scss
+++ b/front-end/src/containers/Checkout/styles.scss
@@ -218,8 +218,8 @@ $page-padding: 110px;
         }
 
         .div-checkout-payment-active {
-          border: 1px solid $extra-light-gray;
-          background-color: $extra-light-gray;
+          border: 1px solid $extra-light-green;
+          background-color: $extra-light-green;
           border-radius: 4px;
         }
       }
