--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -2,7 +2,7 @@
 
 .div-menus-header-container {
   height: 150px;
-  background-color: $extra-light-gray;
+  background-color: $extra-light-green;
   display: flex;
   flex-direction: row;
 
