--- a/front-end/src/containers/Menus/styles.scss
+++ b/front-end/src/containers/Menus/styles.scss
@@ -44,7 +44,7 @@
       }
 
       .div-load-more {
-        background-color: $extra-light-gray;
+        background-color: $extra-light-green;
         width: 333px;
         height: 94px;
         border-radius: 100px; 
