--- a/front-end/src/styles/variables/_colors.scss
+++ b/front-end/src/styles/variables/_colors.scss
@@ -9,8 +9,8 @@ $green-secondary: #108915;
 
 $light-green-primary: #B7CBB8;
 
-$extra-light-gray: #F2FFF3;
-
+$extra-light-green: #F2FFF3;
+$extra-light-gray: #F1F1F1;
 $bg-gray: #F9F9F9;
 
 $bg-footer-primary: #333333;
