--- a/front-end/src/containers/ContactUs/styles.scss
+++ b/front-end/src/containers/ContactUs/styles.scss
@@ -36,7 +36,7 @@
         text-align: center;
         height: 150px;
         line-height: 150px;
-        background-color: $extra-light-gray;
+        background-color: $extra-light-green;
       }
   
       .div-contact-us-separator {
