[FE] show added items in checkout page

--- a/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
+++ b/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
@@ -123,6 +123,8 @@ $order-summary-header-height: 108px;
 
     .order-summary-items-list {
       margin-top: $margin;
+      overflow: scroll;
+      max-height: 400px;
 
       .ordered-item {
         margin-bottom: $margin;
