--- a/front-end/src/containers/Menus/components/MenuItem/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuItem/styles.scss
@@ -24,10 +24,10 @@
     }
   }
 
-  .div-numeric-counter {
+  .div-numeric-counter, .div-add-to-cart {
     display: flex;
     justify-content: flex-end;
-    margin-top: 10px;
+    margin-top: 15px;
   }
 
   // .div-time-rating {
