[FE] authentication page , basic - not responsive

--- a/front-end/src/containers/Root/components/Header/styles.scss
+++ b/front-end/src/containers/Root/components/Header/styles.scss
@@ -8,6 +8,14 @@
     margin-top: 32px;
   }
 
+  .img-flow {
+    position: absolute;
+    height: 35px;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+
   .div-buttons {
     display: flex;
     float: right;
